--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "framer-motion": "^9.0.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.4.2"
+    "react-intersection-observer": "^9.4.2",
+    "react-router-dom": "^6.8.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
