--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^1.20.9",
     "framer-motion": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
