--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^1.20.9",
+    "@codesandbox/sandpack-themes": "^2.0.1",
     "framer-motion": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.2",
     "react-router-dom": "^6.8.1",
+    "react-syntax-highlighter": "^15.5.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
