--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.2",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
