--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-intersection-observer": "^9.4.2",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
+    "smooth-scrollbar": "^8.8.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
