--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@codesandbox/sandpack-react": "^1.20.9",
     "@codesandbox/sandpack-themes": "^2.0.1",
+    "axios": "^1.3.4",
     "firebase": "^9.17.1",
     "framer-motion": "^9.0.2",
     "localforage": "^1.10.0",
