--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "framer-motion": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "overlayscrollbars-react": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
     "smooth-scrollbar": "^8.8.3",
